--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>It's Practice Website</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos magni repellendus fuga animi rem eveniet.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque suscipit et quod impedit nostrum vitae architecto perspiciatis dolorum quisquam provident. </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, soluta molestias? Ut expedita pariatur, inventore nostrum modi amet optio tenetur, odit in sit culpa. Dolore.
+    </p>
+    <p></p>
 </body>
 </html>
