--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             border: 1px solid black;
             border-radius: 3px;
         }
+
+img{
+    display:inline-block block;
+    margin-bottom: 10px;
+    padding-bottom: 100px;
+    border: 1px solid black;
+    image
+}
+
     </style>
 </head>
 <body>
@@ -32,6 +41,10 @@
     <li><a href="https://www.google.com/">google</a></li>
     <li><a href="https://www.google.com/">google</a></li>
 </ul>
+
+
+<img width="200px" src="/Images/img1.jpg" alt="image loading">
+<img width="200px" src="/Images/img2.jpg" alt="please wait to see image">
 
 
 </body>
